<resources>
    <string name="app_name">MyCash</string>
    <string name="hint_word">New item</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Item is empty.</string>

    <string name="navi_report">Report</string>
    <string name="navi_journal">Journal</string>
    <string name="navi_add_new">New</string>
    <string name="navi_accounts">Accounts</string>
    <string name="navi_settings">Settings</string>
</resources>
